# NeoCortexAndroidMoldova

./: .gitignore  README.md  moldovaAndroid.jks  neocortex.jks  pubspec.yaml
android/: gradle.properties  settings.gradle
android/app/: CMakeLists.txt  build.gradle  google-services.json
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/example/neocortexapp/: MainActivity.kt
assets/animations/: loading.json  rotate_device.json
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: firebase_options.dart  main.dart
lib/business/: authenticate_manager.dart  customer_manager.dart  home_manager.dart  location_manager.dart  planogram_manager.dart  product_manager.dart  report_manager.dart  transactions_manager.dart
lib/config/app/: app_config.dart
lib/config/theme/: theme_config.dart
lib/dataaccess/: customer_repository.dart  product_repository.dart  report_repository.dart  survey_repository.dart  transactions_repository.dart  visit_repository.dart
lib/entities/: cooler_info.dart  customer.dart  customer_surver.dart  doors.dart  image.dart  picture_v1.dart  planogram_colors.dart  report.dart  transaction.dart
lib/l10n/: app_en.arb  app_ka.arb  app_kk.arb  app_ro.arb  app_ru.arb
lib/opencv-cpp/: main.cpp  stitch.cpp
lib/ornekler/: sicak_raf.json  tabela.json  teshir.json
linux/: CMakeLists.txt  my_application.cc
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner.xcodeproj/: project.pbxproj
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
(+31 files in other folders)
